--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@wanted/lib",
-  "main": "./src/index.ts",
-  "packageManager": "yarn@3.5.1",
-  "devDependencies": {
-    "typescript": "^5.0.4"
-  }
+    "name": "@wanted/lib",
+    "main": "./src/index.ts",
+    "scripts": {
+        "typecheck": "tsc --project ./tsconfig.json --noEmit"
+    },
+    "packageManager": "yarn@3.5.1",
+    "devDependencies": {
+        "typescript": "^5.0.4"
+    }
 }
