--- a/.github/workflows/ci-wanted-app.yml
+++ b/.github/workflows/ci-wanted-app.yml
@@ -25,6 +25,6 @@ jobs:
         uses: ./.github/actions/yarn-install
 
       - name: Build web-app
-        working-directory: apps/wanted
+        working-directory: apps/app1
         run: |
           yarn build
